tests/compilation_error/global_variable_redefinition.ll
global int g

def foo():
    int g = 3
